syntax = "proto3";
package tendermint.state;

option go_package = "github.com/hyperledger/fabric-droplib/protos/protobufs/states";

import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";
import "github.com/hyperledger/fabric-droplib/protos/protobufs/types/types.proto";
import "github.com/hyperledger/fabric-droplib/protos/protobufs/types/params.proto";
import "github.com/hyperledger/fabric-droplib/protos/protobufs/types/validator.proto";

// ValidatorsInfo represents the latest validator set, or the last height it changed
message ValidatorsInfoProto {
  tendermint.types.ValidatorSetProto validator_set       = 1;
  int64                         last_height_changed = 2;
}

// ConsensusParamsInfo represents the latest consensus params, or the last height it changed
message ConsensusParamsInfoProto {
  tendermint.types.ConsensusParamsProto consensus_params    = 1 [(gogoproto.nullable) = false];
  int64                            last_height_changed = 2;
}


message LatestStateProto {
//  Version version = 1 [(gogoproto.nullable) = false];
  // immutable
  string chain_id       = 2 [(gogoproto.customname) = "ChainID"];
  int64  initial_height = 14;

  // LastBlockHeight=0 at genesis (ie. block(H=0) does not exist)
  int64                    last_block_height = 3;
  tendermint.types.BlockIDProto last_block_id     = 4
  [(gogoproto.nullable) = false, (gogoproto.customname) = "LastBlockID"];
  google.protobuf.Timestamp last_block_time = 5
  [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];

  // LastValidators is used to validate block.LastCommit.
  // Validators are persisted to the database separately every time they change,
  // so we can query for historical validator sets.
  // Note that if s.LastBlockHeight causes a valset change,
  // we set s.LastHeightValidatorsChanged = s.LastBlockHeight + 1 + 1
  // Extra +1 due to nextValSet delay.
  tendermint.types.ValidatorSetProto next_validators                = 6;
  tendermint.types.ValidatorSetProto validators                     = 7;
  tendermint.types.ValidatorSetProto last_validators                = 8;
  int64                         last_height_validators_changed = 9;

  // Consensus parameters used for validating blocks.
  // Changes returned by EndBlock and updated after Commit.
  tendermint.types.ConsensusParamsProto consensus_params                     = 10 [(gogoproto.nullable) = false];
  int64                            last_height_consensus_params_changed = 11;

  // Merkle root of the results from executing prev block
  bytes last_results_hash = 12;

  // the latest AppHash we've received from calling abci.Commit()
  bytes app_hash = 13;
}


