syntax = "proto3";
package tendermint.types;

option go_package = "github.com/hyperledger/fabric-droplib/protos/protobufs/types";

import "gogoproto/gogo.proto";

message ValidatorSetProto {
  repeated ValidatorProto validators = 1;
  ValidatorProto          proposer = 2;
  int64              total_voting_power = 3;
}

message ValidatorProto {
  bytes                       address = 1;
  bytes pub_key = 2 [(gogoproto.nullable) = false];
  int64                       voting_power = 3;
  int64                       proposer_priority = 4;
}

message SimpleValidatorProto {
  bytes pub_key = 1;
  int64                       voting_power = 2;
}
